[package]
name = "malwaredb-virustotal"
version.workspace = true
description = "Logic and datatypes for interacting with VirusTotal"
keywords = ["cybersecurity", "malware", "malware-analysis", "virustotal"]
exclude = ["testdata"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
chrono = ["dep:chrono"]
clap = ["dep:clap"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]
unsafe-serialization = []

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"], optional = true }
clap = { workspace = true, features = ["derive", "env", "std"], optional = true }
reqwest = { workspace = true, features = ["gzip", "http2", "multipart", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["fs"], optional = true }
tracing = { workspace = true, optional = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
hex = { workspace = true, features = ["alloc"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test = { workspace = true }
rstest = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]

[package.metadata.docs.rs]
features = ["chrono", "clap"]

[workspace]
resolver = "2"
members = ["bin"]

[workspace.package]
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
edition = "2021"
homepage = "https://malwaredb.net/"
license = "Apache-2.0"
repository = "https://github.com/malwaredb/vt-client"
version = "0.5.4"
rust-version = "1.84"

[workspace.dependencies]
# Internal depencency
malwaredb-virustotal = { version = "0.5", path = ".", default-features = false }

anyhow = { version = "1.0", default-features = false }
bytes = { version = "1.11", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", default-features = false }
hex = { version = "0.4", default-features = false }
reqwest = { version = "0.13", default-features = true }
rstest = { version = "0.26", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1", default-features = false }
tokio-test = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
zeroize = { version = "1.8", default-features = false }
